#20 Easy Cash Asp.Net Core 6.0 Identity Projesi - Layout Düzenlemeleri

--- a/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutScriptsPartial/Default.cshtml
+++ b/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutScriptsPartial/Default.cshtml
@@ -1,8 +1,7 @@
-﻿
-    <!-- jQuery -->
-    <script src="~/gentela-gh-pages/vendors/jquery/dist/jquery.js"></script>
+﻿  <!-- jQuery -->
+    <script src="~/gentela-gh-pages/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="~/gentela-gh-pages/vendors/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/gentela-gh-pages/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
     <script src="~/gentela-gh-pages/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
