--- a/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
+++ b/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
@@ -1,8 +1,6 @@
-﻿ <!-- footer content -->
-            <footer>
+﻿ <footer>
                 <div class="pull-right">
-                    Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                    Easy Cash Müşteri Paneli <span>@DateTime.Now.Year | Tüm Hakları Saklıdır    </span>
                 </div>
                 <div class="clearfix"></div>
             </footer>
- <!-- /footer content -->
