--- a/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutNavbarPartial/Default.cshtml
+++ b/EasyCashIdentity.Ui/Views/Shared/Components/_CustomerLayoutNavbarPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿   <!-- top navigation -->
+﻿  <!-- top navigation -->
 <div class="top_nav">
     <div class="nav_menu">
         <nav>
@@ -13,15 +13,15 @@
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu pull-right">
-                        <li><a href="javascript:;"> Profile</a></li>
+                        <li><a href="javascript:;"> Profilim</a></li>
                         <li>
                             <a href="javascript:;">
                                 <span class="badge bg-red pull-right">50%</span>
-                                <span>Settings</span>
+                                <span>Ayarlar</span>
                             </a>
                         </li>
-                        <li><a href="javascript:;">Help</a></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                        <li><a href="javascript:;">Yardım</a></li>
+                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Çıkış Yap</a></li>
                     </ul>
                 </li>
 
@@ -33,7 +33,7 @@
                     <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                         <li>
                             <a>
-                                <span class="image"><img src="~/gentela-gh-pages/production/images/img.jpg" alt="Profile Image" /></span>
+                                <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
                                 <span>
                                     <span>John Smith</span>
                                     <span class="time">3 mins ago</span>
@@ -82,7 +82,7 @@
                         <li>
                             <div class="text-center">
                                 <a>
-                                    <strong>See All Alerts</strong>
+                                    <strong>Tüm Bildirimleri Gör</strong>
                                     <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
@@ -92,5 +92,6 @@
             </ul>
         </nav>
     </div>
+
 </div>
 <!-- /top navigation -->
