--- a/EasyCashIdentity.Ui/Views/CustomerLayout/Index.cshtml
+++ b/EasyCashIdentity.Ui/Views/CustomerLayout/Index.cshtml
@@ -14,13 +14,9 @@
             <!-- /top navigation -->
             <!-- page content -->
             <div class="right_col" role="main">
-                <div class="">
-                    <div class="page-title">
-                        <div class="title_left">
-                            <h3>Fixed Footer <small> Just add class <strong>footer_fixed</strong></small></h3>
-                        </div>
-                    </div>
-                </div>
+               
+                           @RenderBody()
+                 
             </div>
             <!-- /page content -->
             <!-- footer content -->
