#26 Easy Cash Asp.Net Core 6.0 Identity Projesi - Para Transferi İşlemlerinde Detaylar

--- a/EasyCashIdentity.Ui/Views/MyAccounts/Index.cshtml
+++ b/EasyCashIdentity.Ui/Views/MyAccounts/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/CustomerLayout/Index.cshtml";
 }
 <!-- page content -->
-
+<div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
@@ -133,5 +133,5 @@
             </div>
         </div>
     </div>
-
+</div>
 <!-- /page content -->
